# AarthiAI

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  TRADEBOT_COMPLETE_ANALYSIS.txt  architecture.md  architecture_analysis.txt  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements-enterprise.txt  requirements.txt  start.bat
AARTHI/: ._backend  ._frontend
AARTHI/backend/: ._analyzer.py
AARTHI/frontend/: ._index.html  analyzer.js  app.js  index.html  styles.css
backend/: app.py  backtest_weights.py  enterprise_models.py  fund_intelligence.py  intraday_model.py  llm_analysis.py  long_term_analysis.py  model.py  reproduce_sentiment.py  requirements-enterprise.txt  requirements.txt  sentiment.py  step4_install.sh  stock_data.py  technical_signals.py  test_intraday_signal.py  test_sentiment_upgrades.py  trader.py
backend/backend/: requirements-enterprise.txt
frontend/: app.js  company.html  fund.html  index.html  mutual-funds.html  sip.html  style.css  tradebot.js
server/: app.py
stitch_predictive_dashboard/company_intelligence_deep_dive/: code.html
stitch_predictive_dashboard/enhanced_predictive_dashboard/: code.html
stitch_predictive_dashboard/indian_market_dashboard/: code.html
stitch_predictive_dashboard/indian_mutual_funds_explorer/: code.html
stitch_predictive_dashboard/mutual_funds_explorer/: code.html
stitch_predictive_dashboard/nifty_50_overview/: code.html
stitch_predictive_dashboard/nifty_50_prediction_overview/: code.html
tradebot/: README.md  requirements.txt  run.py
tradebot/api/: main.py
(+24 files in other folders)
