[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aarthi-ai-env"
version = "1.0.0"
description = "Aarthi AI Predictive Trading Environment"
authors = [
    {name = "PROSTLE", email = "test@example.com"},
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0"
]
