[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aarthi-ai-env"
version = "1.0.0"
description = "Aarthi AI Predictive Trading Environment"
authors = [
    {name = "PROSTLE", email = "test@example.com"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0"
]

[project.scripts]
server = "server.app:main"
